# infrastructure

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  update_history.py
docs/: builder.md  cli_utils.md  git_client.md  http_clients.md  message_bus.md  other.md  path_utils.md
infrastructure/builder/: __init__.py  history.info  main.py
infrastructure/cli_utils/: __init__.py  main.py
infrastructure/git_client/: __init__.py  history.info  main.py
infrastructure/git_client/adapters/git_publisher/: __init__.py  main.py
infrastructure/http_clients/: __init__.py  downloader.py  history.info
infrastructure/http_clients/adapters/: hf_adapter.py
infrastructure/installer/: main.py  script.py
infrastructure/message_bus/: __init__.py  factory.py  factory2.py  history.info  main.py  schemas.py
infrastructure/other/: __init__.py  history.info  shut_up_external_logs.py
infrastructure/path_utils/: __init__.py  flat_json_manager.py  history.info
infrastructure/server/: __init__.py  _app.py  _server.py
infrastructure/settings_manager/: __init__.py  history.info  settings_manager_env.py  settings_manager_json.py  settings_manager_toml.py
src/infrastructure/: pyproject.toml
src/infrastructure/src/infrastructure/builder/: main.py
src/infrastructure/src/infrastructure/git_client/: main.py
src/infrastructure/src/infrastructure/message_bus/: factory.py  history.info  main.py  schemas.py
src/infrastructure/src/infrastructure/other/: shut_up_external_logs.py
src/infrastructure/src/infrastructure/path_utils/: path_finder.py  symlinks.py
(+2 files in other folders)
