[project]
name = "infrastructure-factory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "infrastructure",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4,<3.0",
    "pydantic-core>=2.46.4,<3.0",
]

[tool.uv.workspace]
members = [
    "src/infrastructure",
]

[tool.uv.sources]
infrastructure = { workspace = true }
