[project]
name = "infrastructure"
version = "0.3.0"
description = "Common infrastructure utilities"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4,<3.0",
    "pydantic-settings>=2.14.1",
    "pydantic-core>=2.46.4,<3.0",
    "rich==15.0.0",
    "requests>=2.34.2",
    "tomli-w>=1.2.0",
]
